--- a/src/Todo/Todos/TodoItem/styles.css
+++ b/src/Todo/Todos/TodoItem/styles.css
@@ -1,3 +1,12 @@
 .line-through {
   text-decoration: line-through;
 }
+
+.todo-input {
+  margin-right: 10px;
+}
+
+.todo-close {
+  margin-left: 10px;
+  color: red;
+}
